# varyAI

./: .env.example  .gitignore  ReadME.MD  makefile  pyproject.toml
backend/: extraction.py  importer.py  llm_client.py  main.py  profile_store.py  prompt_builder.py  retrieval.py
frontend/: index.html
