[project]
name = "varyai"
version = "0.1.0"
description = "A local-first AI assistant with a shared memory profile that works across multiple LLMs"
authors = [
    {name = "Vadi",email = "ishaanvadi@gmail.com"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.135.2,<0.136.0)",
    "uvicorn (>=0.42.0,<0.43.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "google-generativeai (>=0.8.6,<0.9.0)",
    "openai (>=2.30.0,<3.0.0)",
    "groq (>=1.1.2,<2.0.0)",
    "chromadb (>=1.5.5,<2.0.0)",
    "sentence-transformers (>=5.3.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
